Fix nsc-comms-service OOM kills and two invalid compose projects
nsc-comms-service was being SIGKILLed by the kernel and restarted. The
kernel log shows constraint=CONSTRAINT_MEMCG, so the container exceeded
its own 1536m cgroup limit while the host still had free RAM.

MaxRAMPercentage=70 gives Xmx=1075 MiB, leaving 461 MiB for all native
memory. The kill reports show 890-973 MiB of shmem-rss (ZGC backs its
heap with shared memory, so the Java heap is accounted as shmem rather
than anon) plus 442-629 MiB anon, totalling up to 1549 MiB. The limit
was structurally unreachable. MaxDirectMemorySize was also unset, so
Netty's direct-buffer ceiling defaulted to the full heap size.

Raise nsc-comms-service to 2048m and move the small services
(scheduler, auth, live, comms, notify) from ZGC to G1. At ~1 GB heap
ZGC's sub-millisecond pauses buy nothing over G1 while costing a few
hundred MB of native overhead, and G1's heap is plain anonymous memory
so docker stats and OOM reports become readable. Services at 4096m and
above keep ZGC, where the 30% headroom is ample.

Add explicit MaxDirectMemorySize/MaxMetaspaceSize/ReservedCodeCacheSize
guardrails so a runaway native allocation produces a diagnosable
OutOfMemoryError plus a heap dump instead of a silent SIGKILL, and add
a rotating GC log per service. This incident left no usable evidence:
the JVM startup lines had already rotated out, jcmd is absent from the
images, and the cgroup counters reset on container recreation.

Drop -XX:MinRAMPercentage=50, which only applies below ~250 MB of
container memory and is a no-op on every service here.

Also fix two projects that docker compose config rejects outright:

- The rc block declared volume bus-valkey-volume but bus-valkey mounted
  bus-redis-volume, a half-applied redis->valkey rename. Restore the
  bus-redis-volume declaration so existing deployments keep their data;
  a real rename needs a deliberate migration. This mattered because
  nsc3-upgrade.sh silently falls back t